Fixed h1 alignment in docs page

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -151,7 +151,7 @@
 }
 
 /* Doc Page main */
-.theme-doc-markdown h1 {
+.theme-doc-markdown > h1 {
     text-align: center;
 }
 
